@@ -1,4 +1,4 @@
-This file has been superseeded by the fils in the doc folder.
+This file has been superseeded by the files in the doc folder.
 Please see doc/manual.html for futher details. If you are
 looking for install information doc/install.html is for you!
 If you do not have the doc set, see
