@@ -8,6 +8,7 @@ html_files = \
 	history.html \
 	how2help.html \
 	install.html \
+	build_from_repo.html \
 	ipv6.html \
 	log_rotation_fix_size.html \
 	manual.html \
