@@ -24,7 +24,11 @@ you volunteer to create one, <a href="mailto:rgerhards@adiscon.com">drop me a
 line</a>). Thus, this guide focuses on installing from the source, which 
 thankfully is <b>quite easy</b>.</p>
 <h3>Step 1 - Download Software</h3>
-<p>For obvious reasons, you need to download rsyslog. Load the most recent build 
+<p>For obvious reasons, you need to download rsyslog. Here, I assume that you
+use a distribution tarball. If you would like to use a version directly from
+the repository, see <a href="build_from_repo.html">build rsyslog from repository</a>
+instead.
+<p>Load the most recent build 
 from <a href="http://www.rsyslog.com/downloads">http://www.rsyslog.com/downloads</a>. 
 Extract the software with &quot;tar xzf -nameOfDownloadSet-&quot;. This will create a new 
 subdirectory rsyslog-version in the current working directory. CD into that. </p>
@@ -150,9 +154,12 @@ comments or bug sighting reports are very welcome. Please
 	<li>2007-07-13 * 
 	<a href="http://www.adiscon.com/en/people/rainer-gerhards.php">Rainer Gerhards</a>&nbsp; 
 	* updated to new autotools-based build system</li>
+	<li>2008-10-01 * 
+	<a href="http://www.adiscon.com/en/people/rainer-gerhards.php">Rainer Gerhards</a>&nbsp; 
+	* added info on building from source repository</li>
 </ul>
 <h3>Copyright</h3>
-<p>Copyright (c)  2005, 2007 
+<p>Copyright &copy;  2005-2008
 <a href="http://www.adiscon.com/en/people/rainer-gerhards.php">Rainer Gerhards</a> and
 <a href="http://www.adiscon.com/en/">Adiscon</a>.</p>
 <p>      Permission is granted to copy, distribute and/or modify this document
@@ -162,6 +169,12 @@ comments or bug sighting reports are very welcome. Please
 	 Texts.  A copy of the license can be viewed at
 <a href="http://www.gnu.org/copyleft/fdl.html">
 http://www.gnu.org/copyleft/fdl.html</a>.</p>
-
+<p>[<a href="manual.html">manual index</a>]
+[<a href="http://www.rsyslog.com/">rsyslog site</a>]</p>
+<p><font size="2">This documentation is part of the
+<a href="http://www.rsyslog.com/">rsyslog</a> project.<br>
+Copyright &copy; 2008 by <a href="http://www.gerhards.net/rainer">Rainer Gerhards</a> and
+<a href="http://www.adiscon.com/">Adiscon</a>. Released under the GNU GPL 
+version 1.2 or higher.</font></p>
 </body>
 </html>
