@@ -1197,6 +1197,5 @@ When compared to syslogd from sysklogd package, rsyslogd offers
 additional
 <a href="features.html">features</a> (like template
 and database support). For obvious reasons, the syntax for defining
-such features is available in rsyslogd, only.<br>
-&nbsp;</p>
+such features is available in rsyslogd, only.</p>
 </body></html>
